@@ -71,7 +71,10 @@
 extern "C" {
 #endif
 
-typedef struct rand_meth_st
+/* Already defined in ossl_typ.h */
+/* typedef struct rand_meth_st RAND_METHOD; */
+
+struct rand_meth_st
 	{
 	void (*seed)(const void *buf, int num);
 	int (*bytes)(unsigned char *buf, int num);
@@ -79,7 +82,7 @@ typedef struct rand_meth_st
 	void (*add)(const void *buf, int num, double entropy);
 	int (*pseudorand)(unsigned char *buf, int num);
 	int (*status)(void);
-	} RAND_METHOD;
+	};
 
 #ifdef BN_DEBUG
 extern int rand_predictable;
